2/21/11 #2746, open color chooser when clicking on label in ColorControl
2/19/11 Iterate on a copy of the observer list to avoid ConcurrentModificationException, see #2741
2/19/11 #2741 Removed unused method from SimpleObservable
2/17/11 #2741 Hygiene issues for SimpleObservable: converted to use generics, converted to foreach loop, removed unused field, cleaned up docs, reformatted code
2/16/11 #2739, add cleanup methods to Swing controls that observer Property<T>
2/15/11 Added Function1.Constant
2/10/11 add VoidFunction0.Null
2/8/2100 Generalized to parent types in BooleanProperty combinators and Or
2/7/2011 Added string "White Background" to string file
2/7/2011 Added a method to OptionsMenu that allows you to easily add a "White Background" menu item
1/31/2011 Added PropertyCheckBoxMenuItem
1/31/2011 Added IfElse<T>, an ObservableProperty that uses a Property<Boolean> condition to simulation an if/else block.
1/30/2011 Added VoidFunction1.Null, a no-op implementation with no side effects
1/30/2011 Rewrote PropertyCheckBox and PropertyRadioButton to use more general parameter type SettableProperty instead of concrete subclass Property
1/25/2011 Set the slider in IntensitySlider to paint ticks, see #2682 for motivation and details.
1/24/2011 Added getters and setters to Time Speed Slider classes
1/16/2011 Made Property.getInitialValue protected to keep the API for Property as simple as possible for typical usage,
    but possible to override for applications which require knowledge about the initial value such as Gravity and Orbits
1/12/2011 Added the capability to send out notifications before PhetApplication exits, see PhetExit
1/7/2011 #2624, new credits logo from KSU
1/7/2011 #2624, change KSU credits logo from PNG to medium JPG compression, decreases file size to 18K, still looks good
1/7/2011 #2624, change request: reduce size of KSU credits logo by 25%
1/7/2011 Updated copyright text and dates for phetcommon, see #2630